# fzf-wrapped

./: .gitignore  Cargo.toml  README.md
examples/: color.rs
src/: fzf.rs  lib.rs  options.rs
