[package]
name = "fzf-wrapped"
version = "0.1.0"
authors=["Daniel Ronalds"]
edition = "2021"
description="A library for integrating the `fzf` cli tool into your rust program!"
license="MIT"
readme="README.md"
repository="https://github.com/danielronalds/fzf-wrapped"
# TODO: keywords and categories

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
